--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"zizaco/confide": "~4.0"
+		"zizaco/confide": "~4.0",
+		"thomaswelton/laravel-gravatar": "~0.1"
 	},
 	"autoload": {
 		"classmap": [
