--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,8 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"require-dev": {
+		"barryvdh/laravel-debugbar": "~1.7"
+	}
 }
