--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.2.*",
 		"zizaco/confide": "~4.0",
 		"thomaswelton/laravel-gravatar": "~0.1",
-		"intervention/image": "~2.0"
+		"intervention/image": "~2.0",
+		"rtconner/laravel-tagging": "0.4.*"
 	},
 	"autoload": {
 		"classmap": [
