--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"zizaco/confide": "~4.0",
 		"thomaswelton/laravel-gravatar": "~0.1",
 		"intervention/image": "~2.0",
-		"rtconner/laravel-tagging": "0.4.*"
+		"rtconner/laravel-tagging": "0.4.*",
+		"artdarek/oauth-4-laravel": "~1.0"
 	},
 	"autoload": {
 		"classmap": [
