--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+			"app/models/scopes",
+			"app/models/traits",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
