add transformer for user to do serialise. set default serializer to ArraySerializer

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 			"app/commands",
 			"app/controllers",
 			"app/controllers/api",
+			"app/controllers/api/transformers",
 			"app/models",
 			"app/models/scopes",
 			"app/models/traits",
