--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 		"rtconner/laravel-tagging": "0.4.*",
 		"artdarek/oauth-4-laravel": "~1.0",
 		"rcrowe/turbo": "~0.3",
-		"dingo/api": "~0.6"
+		"dingo/api": "dev-master#febeb58b97"
 	},
 	"autoload": {
 		"classmap": [
