--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"zizaco/confide": "~4.0",
+		"zizaco/entrust": "~1.3",
 		"thomaswelton/laravel-gravatar": "~0.1",
 		"intervention/image": "~2.0",
 		"rtconner/laravel-tagging": "0.4.*",
