--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"artdarek/oauth-4-laravel": "~1.0",
 		"rcrowe/turbo": "~0.3",
 		"dingo/api": "dev-master#febeb58b97",
-		"doctrine/dbal": "~2.5"
+		"doctrine/dbal": "~2.5",
+		"barryvdh/laravel-cors": "0.2.x"
 	},
 	"autoload": {
 		"classmap": [
