--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		"rtconner/laravel-tagging": "0.4.*",
 		"artdarek/oauth-4-laravel": "~1.0",
 		"rcrowe/turbo": "~0.3",
-		"dingo/api": "dev-master#febeb58b97",
+		"dingo/api": "0.8.*",
 		"doctrine/dbal": "~2.5",
 		"barryvdh/laravel-cors": "0.2.x"
 	},
